--- a/package.json
+++ b/package.json
@@ -48,5 +48,17 @@
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "~2.5.3"
-  }
+  },
+  "main": "karma.conf.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pooters9/light.git"
+  },
+  "keywords": [],
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/pooters9/light/issues"
+  },
+  "homepage": "https://github.com/pooters9/light#readme",
+  "description": ""
 }
