--- a/package.json
+++ b/package.json
@@ -4,14 +4,11 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve node server.js",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
-  },
-  "engines": {
-    "node": "8.0.0"
   },
   "private": true,
   "dependencies": {
@@ -24,7 +21,10 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "body-parser": "^1.18.3",
     "core-js": "^2.4.1",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
@@ -48,17 +48,5 @@
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "~2.5.3"
-  },
-  "main": "karma.conf.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/pooters9/light.git"
-  },
-  "keywords": [],
-  "author": "",
-  "bugs": {
-    "url": "https://github.com/pooters9/light/issues"
-  },
-  "homepage": "https://github.com/pooters9/light#readme",
-  "description": ""
+  }
 }
